--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 			</div>
 			<div class="newsfeed">
-				<marquee direction= "left" <h1> wThe Hub | Placement opportunities </h1></marquee>
+				<marquee direction= "left" <h1> The Hub | Placement opportunities </h1></marquee>
 			</div>
 
 		</header>
