--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title> The Hub </title>
-	<link rel="stylesheet" type="css" href="/style.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
