--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ https://templatemo.com/tm-545-finance-business
           </div>
           <div class="col-md-4">
             <ul class="right-icons">
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://www.facebook.com/GolddreanFx"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
               <li><a href="#"><i class="fa fa-behance"></i></a></li>
@@ -250,7 +250,7 @@ https://templatemo.com/tm-545-finance-business
                   <div class="right-content">
                     <span>Who we are</span>
                     <h2>Get to know about <em>our company</em></h2>
-                    <p>Gold Dream FX was established in 2021 by Forgive Modise, a Chemical Engineer with a passion for innovation and creativity<br><br>Gold Dream FX aims to encourage young people to invest in themselves and believe in themselves through the financial markets</p>
+                    <p>Gold Dream FX was established in 2018 by Forgive Modise, a Chemical Engineer with a passion for innovation and creativity<br><br>Gold Dream FX aims to encourage young people to invest in themselves and believe in themselves through the financial markets</p>
                     <a href="#" class="filled-button">Read More</a>
                   </div>
                 </div>
