--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-8 col-xs-12">
             <ul class="left-info">
               <li><a href="#"><i class="fa fa-clock-o"></i>Mon-Fri 08:00-17:00</a></li>
-              <li><a href="#"><i class="fa fa-phone"></i>061-682-4181</a></li>
+              <li><a href="tel:+27616824181"><i class="fa fa-phone"></i>061-682-4181</a></li>
             </ul>
           </div>
           <div class="col-md-4">
