--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="author" content="TemplateMo">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Finance Business - About Page</title>
+    <title>Gold Dream FX - About Page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -46,7 +46,7 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-8 col-xs-12">
             <ul class="left-info">
               <li><a href="#"><i class="fa fa-clock-o"></i>Mon-Fri 08:00-17:00</a></li>
-              <li><a href="#"><i class="fa fa-phone"></i>061-682-4181</a></li>
+              <li><a href="tel:+27616824181"><i class="fa fa-phone"></i>061-682-4181</a></li>
             </ul>
           </div>
           <div class="col-md-4">
