--- a/services.html
+++ b/services.html
@@ -109,8 +109,8 @@ https://templatemo.com/tm-545-finance-business
             <ul>
               <li><a href='#tabs-1'>Market Analysis and Trade Ideas<i class="fa fa-angle-right"></i></a></li>
               <li><a href='#tabs-2'>Indicators and Robots <i class="fa fa-angle-right"></i></a></li>
-              <li><a href='#tabs-3'>Signals and Account Management <i class="fa fa-angle-right"></i></a></li>
-              <li><a href='#tabs-4'>Mentorship Programme <i class="fa fa-angle-right"></i></a></li>
+              <li><a href='#tabs-3'>Reading Material <i class="fa fa-angle-right"></i></a></li>
+              <li><a href='#tabs-4'>Gold Dream FX Subscriptions <i class="fa fa-angle-right"></i></a></li>
             </ul>
           </div>
           <div class="col-md-8">
@@ -152,8 +152,18 @@ https://templatemo.com/tm-545-finance-business
               </article>
               <article id='tabs-3'>
                 <img src="assets/images/single_service_03.jpg" alt="">
-                <h4>Signals and Account Management </h4>
-                <p>Mauris lobortis quam id dictum dignissim. Donec pellentesque erat dolor, cursus dapibus turpis hendrerit quis. Suspendisse at suscipit arcu. Nulla sed erat lectus. Nulla facilisi. In sit amet neque sapien. Donec scelerisque mi at gravida efficitur. Nunc lacinia a est eu malesuada. Curabitur eleifend elit sapien, sed pulvinar orci luctus eget. 
+                <h4>Reading Material </h4>
+                <p> <h3>Sam Saiden 5 years experience of Supply and Demand</h3><br><br><img src="assets/Books/b5.png" alt="Supply and Demand">
+							Download <a href="assets/Books/sam_saiden.pdf"> Sam Saiden 5 years experince of Supply and Demand</a>
+                <br><br> <h3>Rich Dad Poor Dad </h3><br><br> <img src="assets/Books/b2.png" alt="Rich Dad Poor Dad"> 
+								Download <a href="assets/Books/Rich_Dad_Poor_Dad.pdf"> Rich Dad Poor Dad</a>
+		<br><br> <h3>Psychology of Wealth</h3> <br><br> <img src="assets/Books/b1.png" alt="Psychology of Wealth">
+								Download <a href="assets/Books/Psychology_of_Wealth.pdf"> </a>
+		<br><br> <h3>The Intelligent Investor</h3> <br><br> <img src="assets/Books/b4.png" alt="The Intelligent Investor"> 
+								Download <a href="assets/Books/The_Intelligent_Investor.pdf"> The Intelligent Investor</a>
+		<br><br> <h3>Millionaire Teacher</h3> <br><br> <img src="assets/Books/b3.png" alt="Millionaire Teacher"> 
+								Download <a href="assets/Books/Millionaire_Teacher.pdf"> Millionaire Teacher</a>
+		<br><br>Mauris lobortis quam id dictum dignissim. Donec pellentesque erat dolor, cursus dapibus turpis hendrerit quis. Suspendisse at suscipit arcu. Nulla sed erat lectus. Nulla facilisi. In sit amet neque sapien. Donec scelerisque mi at gravida efficitur. Nunc lacinia a est eu malesuada. Curabitur eleifend elit sapien, sed pulvinar orci luctus eget. 
                 <br><br>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc vel ultrices nulla, ac tincidunt eros. Aenean quis tellus velit. Praesent pretium justo non auctor condimentum.</p>
               </article>
               <article id='tabs-4'>
