--- a/services.html
+++ b/services.html
@@ -158,7 +158,7 @@ https://templatemo.com/tm-545-finance-business
                 <br><br> <h3>Rich Dad Poor Dad </h3><br><br> <img src="assets/Books/b2.PNG" alt="Rich Dad Poor Dad"> 
 								<br><br>Download <a href="assets/Books/Rich_Dad_Poor_Dad.pdf"> Rich Dad Poor Dad</a>
 		<br><br> <h3>Psychology of Wealth</h3> <br><br> <img src="assets/Books/b1.PNG" alt="Psychology of Wealth">
-								<br><br>Download <a href="assets/Books/Psychology_of_Wealth.pdf"> </a>
+								<br><br>Download <a href="assets/Books/Psychology_of_Wealth.pdf"> Psychology of Wealth</a>
 		<br><br> <h3>The Intelligent Investor</h3> <br><br> <img src="assets/Books/b4.PNG" alt="The Intelligent Investor"> 
 								<br><br>Download <a href="assets/Books/The_Intelligent_Investor.pdf"> The Intelligent Investor</a>
 		<br><br> <h3>Millionaire Teacher</h3> <br><br> <img src="assets/Books/b3.PNG" alt="Millionaire Teacher"> 
