--- a/services.html
+++ b/services.html
@@ -131,7 +131,7 @@ https://templatemo.com/tm-545-finance-business
 			</dl>
 		</p> 
                 <br><br>
-		<p>22 November 2022, 12:00 <br><br>Proin eu molestie risus. Etiam suscipit pretium odio, at consectetur nisi. Sed ut dolor in augue cursus ultrices. Vivamus mauris turpis, auctor vel facilisis in, tincidunt vel diam. Sed vitae scelerisque orci. Nunc non magna orci. Aliquam commodo mauris ante.</p>
+		<p></p>
               </article>
 
 
@@ -148,8 +148,9 @@ https://templatemo.com/tm-545-finance-business
 								Download <a href="assets/indicators/HarmonicPattern.zip"> Harmonic Patterns Indicator</a>
 		<br><br> <h3>Supply and Demand Indicator</h3> <br><br> <img src="assets/indicators/indicatorimages/p7.png" alt="Supply and Demand Indicator"> 
 								Download <a href="assets/indicators/supplyanddemand.rar"> Supply and Demand Indicator Indicator</a>
-		<br><br>Pellentesque pretium, massa at placerat vehicula, neque turpis pulvinar tortor, eget convallis lorem odio non tortor. Donec massa est, fermentum sit amet felis ac, maximus luctus elit. Vivamus aliquet, dolor id imperdiet imperdiet, dui diam aliquet dui, a euismod metus enim ac velit. Vivamus eu tristique odio, vel tristique quam.</p>
+		<br><br></p>
               </article>
+		
               <article id='tabs-3'>
                 <img src="assets/images/single_service_03.jpg" alt="">
                 <h4>Reading Material </h4>
@@ -163,14 +164,17 @@ https://templatemo.com/tm-545-finance-business
 								<br><br>Download <a href="assets/Books/The_Intelligent_Investor.pdf"> The Intelligent Investor</a>
 		<br><br> <h3>Millionaire Teacher</h3> <br><br> <img src="assets/Books/b3.PNG" alt="Millionaire Teacher"> 
 								<br><br>Download <a href="assets/Books/Millionaire_Teacher.pdf"> Millionaire Teacher</a>
-		<br><br>Mauris lobortis quam id dictum dignissim. Donec pellentesque erat dolor, cursus dapibus turpis hendrerit quis. Suspendisse at suscipit arcu. Nulla sed erat lectus. Nulla facilisi. In sit amet neque sapien. Donec scelerisque mi at gravida efficitur. Nunc lacinia a est eu malesuada. Curabitur eleifend elit sapien, sed pulvinar orci luctus eget. 
-                <br><br>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc vel ultrices nulla, ac tincidunt eros. Aenean quis tellus velit. Praesent pretium justo non auctor condimentum.</p>
+		<br><br> 
+                <br><br></p>
               </article>
               <article id='tabs-4'>
                 <img src="assets/images/single_service_04.jpg" alt="">
-                <h4>Mentorship Programme </h4>
-                <p>Integer vehicula sapien quis dolor efficitur, eget molestie eros tempus. Curabitur sollicitudin, tortor at suscipit volutpat, nisi arcu aliquet dui, vitae semper sem turpis quis libero. Quisque vulputate lacinia nisl ac lobortis. Ut ultricies maximus turpis, in sollicitudin ligula posuere vel. 
-                <br><br>Donec finibus maximus neque, vitae egestas quam imperdiet nec. Proin nec mauris eu tortor consectetur tristique. Etiam suscipit ante a odio consequat, in ornare lacus suscipit. Cras ac libero massa. Quisque rhoncus velit feugiat vulputate mollis. Donec nisl eros, malesuada sed nisi id, condimentum condimentum quam.</p>
+                <h4>Gold Dream FX Subscriptions </h4>
+                <p> <h3>Trading Room</h3> <br><br> On Whatsapp
+		<br><br><h3>Trade Signals</h3> On Whatsapp
+		<br><br><h3>Account Management</h3> On Whatsapp
+		      <br><br>Mentorship Programme</h3> On Whatsapp
+		</p>
               </article>
             </section>
           </div>
