--- a/services.html
+++ b/services.html
@@ -170,10 +170,10 @@ https://templatemo.com/tm-545-finance-business
               <article id='tabs-4'>
                 <img src="assets/images/single_service_04.jpg" alt="">
                 <h4>Gold Dream FX Subscriptions </h4>
-                <p> <h3>Trading Room</h3> <br><br> On Whatsapp
+		<p> <h3>Trading Room</h3> On Whatsapp
 		<br><br><h3>Trade Signals</h3> On Whatsapp
 		<br><br><h3>Account Management</h3> On Whatsapp
-		      <br><br>Mentorship Programme</h3> On Whatsapp
+		<br><br><h3>Mentorship Programme</h3> On Whatsapp
 		</p>
               </article>
             </section>
