--- a/services.html
+++ b/services.html
@@ -249,7 +249,7 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-3 footer-item">
             <h4>Gold Dream FX</h4>
-            <p>Reach out to up on the following social media platforms</p>
+            <p>Reach out to us on the following social media platforms</p>
             <ul class="social-icons">
               <li><a href="https://www.facebook.com/GolddreamFx"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
