--- a/contact.html
+++ b/contact.html
@@ -209,10 +209,10 @@ https://templatemo.com/tm-545-finance-business
       <div class="container">
         <div class="row">
           <div class="col-md-3 footer-item">
-            <h4>Finance Business</h4>
-            <p>Vivamus tellus mi. Nulla ne cursus elit,vulputate. Sed ne cursus augue hasellus lacinia sapien vitae.</p>
+            <h4>Gold Dream FX</h4>
+            <p>Reach out to us on the following social media platforms</p>
             <ul class="social-icons">
-              <li><a rel="nofollow" href="https://fb.com/templatemo" target="_blank"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://www.facebook.com/GolddreamFx"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
               <li><a href="#"><i class="fa fa-behance"></i></a></li>
@@ -221,20 +221,20 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-3 footer-item">
             <h4>Useful Links</h4>
             <ul class="menu-list">
-              <li><a href="#">Vivamus ut tellus mi</a></li>
-              <li><a href="#">Nulla nec cursus elit</a></li>
-              <li><a href="#">Vulputate sed nec</a></li>
-              <li><a href="#">Cursus augue hasellus</a></li>
-              <li><a href="#">Lacinia ac sapien</a></li>
+              <li><a href="#">Trading Room</a></li>
+              <li><a href="#">Trading Signals</a></li>
+              <li><a href="#">Account Management</a></li>
+              <li><a href="#">Mentorship Programme</a></li>
+              <li><a href="#">Gold Dream FX Seminars</a></li>
             </ul>
           </div>
           <div class="col-md-3 footer-item">
             <h4>Additional Pages</h4>
             <ul class="menu-list">
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">How We Work</a></li>
-              <li><a href="#">Quick Support</a></li>
-              <li><a href="#">Contact Us</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="services.html">How We Work</a></li>
+              <li><a href="services.html">Quick Support</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
               <li><a href="#">Privacy Policy</a></li>
             </ul>
           </div>
