--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@ https://templatemo.com/tm-545-finance-business
             <div class="service-item">
               <img src="assets/images/service_01.jpg" alt="">
               <div class="down-content">
-                <h4>Digital Currency</h4>
-                <p>Sed tincidunt dictum lobortis. Aenean tempus diam vel augue luctus dignissim. Nunc ornare leo tortor.</p>
+                <h4>Synthetic Indices</h4>
+                <p>Synthetic Indices are simulated instrument that can be traded 24/7 and it is not influenced by news in the financial or political world.</p>
                 <a href="" class="filled-button">Read More</a>
               </div>
             </div>
@@ -172,7 +172,7 @@ https://templatemo.com/tm-545-finance-business
               <img src="assets/images/service_02.jpg" alt="">
               <div class="down-content">
                 <h4>Market Analysis</h4>
-                <p>Sed tincidunt dictum lobortis. Aenean tempus diam vel augue luctus dignissim. Nunc ornare leo tortor.</p>
+                <p>Market analysis is one of the cornerstone of our services. Our analysts over 3 years experience in trading synthetic indices and they share with students in a simplified manner.</p>
                 <a href="" class="filled-button">Read More</a>
               </div>
             </div>
@@ -182,7 +182,7 @@ https://templatemo.com/tm-545-finance-business
               <img src="assets/images/service_03.jpg" alt="">
               <div class="down-content">
                 <h4>Historical Data</h4>
-                <p>Sed tincidunt dictum lobortis. Aenean tempus diam vel augue luctus dignissim. Nunc ornare leo tortor.</p>
+                <p>Based on history and backtesting we have completed of the years trading, we are confident and our methods and teachings.</p>
                 <a href="" class="filled-button">Read More</a>
               </div>
             </div>
