--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ https://templatemo.com/tm-545-finance-business
               <span>Synthetic Indices</span>
               <h2>Our solutions for your <em>business growth</em></h2>
               <p>Synthetic Indices are our area of expertise and we are working hard to protect and take care of our clients investments with moderate risk however great management from our experienced analysts and mentors 
-              <br><br>Synthetic Indices are consistent instruments that are not affected my the world financial/political news, in contrast to the forex market</p>
+              <br><br>Synthetic Indices are consistent instruments that are not affected by the financial / political news, in contrast to the forex markets</p>
               <a href="" class="filled-button">Read More</a>
             </div>
           </div>
@@ -286,7 +286,7 @@ https://templatemo.com/tm-545-finance-business
                 <div class="inner-content">
                   <h4>Wiseman Mabheba</h4>
                   <span>Market Specialist</span>
-                  <p>"Gold Dream FX has changed my life and I believe my family will always have financial sustainability. It is all about the knowledge from the mentors"</p>
+                  <p>"Gold Dream FX has changed my life and I believe my family will always have financial knowledge for generations to come. It is all about the knowledge from the mentors"</p>
                 </div>
                 <img src="http://placehold.it/60x60" alt="">
               </div>
