--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ https://templatemo.com/tm-545-finance-business
               <img src="assets/images/service_02.jpg" alt="">
               <div class="down-content">
                 <h4>Market Analysis</h4>
-                <p>Market analysis is one of the cornerstone of our services. Our analysts over 3 years experience in trading synthetic indices and they share with students in a simplified manner.</p>
+                <p>Market analysis is one of the cornerstone of our services. Our analysts with over 3 years experience in trading synthetic indices share their knowledge with students in a simplified manner.</p>
                 <a href="" class="filled-button">Read More</a>
               </div>
             </div>
@@ -182,7 +182,7 @@ https://templatemo.com/tm-545-finance-business
               <img src="assets/images/service_03.jpg" alt="">
               <div class="down-content">
                 <h4>Historical Data</h4>
-                <p>Based on history and backtesting we have completed of the years trading, we are confident and our methods and teachings.</p>
+                <p>Based on history and backtesting we have completed over the years of trading, we are confident in our methods and teachings.</p>
                 <a href="" class="filled-button">Read More</a>
               </div>
             </div>
