--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ https://templatemo.com/tm-545-finance-business
                   <h6>we have a solid background</h6>
                   <h4>Reading Materials<br>&amp; Indicators</h4>
                   <p>Gold Dream FX put together a collection of reading material that every trader should lay their eyes on. Indicators and Robots? We collected informative indicators and we explore the trading robots because we are innovative geeks </p>
-                  <a href="about.html" class="filled-button">learn more</a>
+                  <a href="services.html" class="filled-button">learn more</a>
                 </div>
             </div>
           </div>
