--- a/about.html
+++ b/about.html
@@ -112,9 +112,9 @@ https://templatemo.com/tm-545-finance-business
                   <div class="right-content">
                     <span>our solid background on finance</span>
                     <h2>Get to know about <em>our company</em></h2>
-                    <p>Fusce nec ultrices lectus. Duis nec scelerisque risus. Ut id tempor turpis, ac dignissim ipsum. Nulla ullamcorper, ipsum vel condimentum congue, mi odio vehicula tellus, sit amet malesuada justo sem. 
-                    <br><br>Pellentesque in sagittis lacus, vel auctor sem. Quisque eu quam eleifend, ullamcorper dui nec, luctus quam.</p>
-                    <a href="" class="filled-button">Read More</a>
+                    <p>Gold Dream FX was established in 2018 by Forgive Modise, a Chemical Engineer with a passion for innovation and creativity
+                      <br><br>Gold Dream FX aims to encourage young people to invest in themselves and believe in themselves through the financial markets</p>
+                    <a href="services.html" class="filled-button">Read More</a>
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -135,16 +135,16 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-12">
             <div class="section-heading">
               <h2>Our team <em>members</em></h2>
-              <span>Suspendisse a ante in neque iaculis lacinia</span>
+              <span>Invest In Yourself</span>
             </div>
           </div>
           <div class="col-md-4">
             <div class="team-item">
               <img src="assets/images/team_01.jpg" alt="">
               <div class="down-content">
-                <h4>William Smith</h4>
+                <h4>Forgive Modise</h4>
                 <span>Co-Founder</span>
-                <p>In sem sem, dapibus non lacus auctor, ornare sollicitudin lacus. Aliquam ipsum urna, semper quis.</p>
+                <p>Analyst and Mentor. Specialise in Jump100. <br><br> "Good Risk to Reward is the key to Success"</p>
               </div>
             </div>
           </div>
