--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@ https://templatemo.com/tm-545-finance-business
               <div class="row">
                 <div class="col-md-6 align-self-center">
                   <div class="right-content">
-                    <span>our solid background on finance</span>
+                    <span>our solid background on Gold Dream FX</span>
                     <h2>Get to know about <em>our company</em></h2>
                     <p>Gold Dream FX was established in 2018 by Forgive Modise, a Chemical Engineer with a passion for innovation and creativity
                       <br><br>Gold Dream FX aims to encourage young people to invest in themselves and believe in themselves through the financial markets</p>
@@ -140,7 +140,7 @@ https://templatemo.com/tm-545-finance-business
           </div>
           <div class="col-md-4">
             <div class="team-item">
-              <img src="assets/images/team_01.jpg" alt="">
+              <img src="assets/images/team_04.jpg" alt="">
               <div class="down-content">
                 <h4>Forgive Modise</h4>
                 <span>Co-Founder</span>
