--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@ https://templatemo.com/tm-545-finance-business
               <img src="assets/images/team_04.jpg" alt="">
               <div class="down-content">
                 <h4>Forgive Modise</h4>
-                <span>Co-Founder</span>
+                <span>Founder and CEO</span>
                 <p>Analyst and Mentor. Specialise in Jump100. <br><br> "Good Risk to Reward is the key to Success"</p>
               </div>
             </div>
